# wazuh-attack-mapper-gemini2

./: .gitignore  LICENSE  README.md  pyproject.toml
Config/: rules_mapping.json
examples/: alert_example.json  rule_example.xml
src/: cli.py  exporters.py  mapper.py  parsers.py
tests/: test_parsers.py
