[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wazuh-attack-mapper"
version = "1.0.0"
description = "Artefato científico para mapeamento automatizado de logs/regras Wazuh para MITRE ATT&CK."
readme = "README.md"
authors = [{ name = "Senior CyberSecurity Engineer & AI Specialist" }]
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "jinja2>=3.1.0",
    "rich>=13.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0"
]

[project.scripts]
wazuh-mapper = "src.cli:main"
